Fixed the cross so it appears / reappears on mobile.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -56,6 +56,10 @@ body{
 	padding-right: 5%;
 }
 
+nav .menu{
+	padding-left: 85%;
+}
+
 .bar1, .bar2, .bar3{
 	width:80px;
 	height:15px;
